<resources>
    <string name="app_name" translatable="false">WirelessTransferAndroid</string>

    <!-- device information -->
    <string name="device_name">裝置名稱:</string>
    <string name="device_ip">裝置IP:</string>
    <string name="wifi_name">Wifi名稱:</string>

    <!-- nav title-->
    <string name="home">首頁</string>
    <string name="screen_share">螢幕分享</string>
    <string name="file_share">檔案分享</string>
    <string name="setting">設定</string>

    <string name="choose_file">選擇檔案</string>
    <string name="search_device">尋找裝置</string>

    <string name="mirror">鏡像</string>
    <string name="extend">延伸</string>

    <!-- functions-->
    <string name="send">傳送</string>
    <string name="receive">接收</string>

    <string name="add">新增</string>
    <string name="delete">刪除</string>

    <!-- qr code -->
    <string name="qr_scanner_description">QR Code掃描器</string>
    <string name="qr_scanner_prompt">請掃描PC端的QR Code</string>
    <string name="qr_description">顯示QR Code</string>

    <!-- hint -->
    <string name="waiting_connection">等待連接中</string>
    <string name="connected_to_pc">已連接到電腦</string>
    <string name="disconnected_from_pc">與電腦的連線中斷</string>
    <string name="keyboard_btn">鍵盤</string>
    <string name="incorrect_format">格式不正確</string>
    <string name="transferring">傳輸中</string>
    <string name="remaining">剩下</string>
    <string name="file">個檔案</string>
    <string name="select_file">選擇檔案</string>
    <string name="no_file_selected">請先選擇檔案</string>
    <string name="refuse_connect">對方已拒絕連接!</string>
    <string name="request_timeout">請求超時!</string>
    <string name="download_complete">你的檔案都已下載完成</string>
    <string name="downloading">檔案下載中</string>
    <string name="sending">檔案傳送中</string>
    <string name="send_complete">你的檔案都已傳送完成</string>
    <string name="using_wifi_hotspot">WIFI熱點使用中</string>
    <string name="chose_file_count">已選擇檔案:</string>
    <string name="total">總計:</string>

    <!-- dialogs -->
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="return_home">返回主頁</string>

    <string name="permission_warring_dialog_title">需要權限</string>
    <string name="location_permission_warring_message">必須許可位置權限，才能使用此app</string>
    <string name="storage_permission_warring_message">必須許可所有儲存空間權限，才能使用此app</string>

    <string name="wifi_not_connected_dialog_title">Wifi未連接</string>
    <string name="wifi_not_connected_message">請連接Wifi，才能使用此app</string>

    <string name="screen_share_request_dialog_title">螢幕分享要求</string>
    <string name="screen_share_request_message">想要分享螢幕給你，是否要接受?</string>

    <string name="file_share_request_dialog_title">檔案分享要求</string>
    <string name="file_share_request_message">想要分享檔案給你，是否要接受?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>