<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FileShareFragment"
    android:background="@color/background">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/file_share"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/baseline_navigate_before_24"/>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <!-- function buttons -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="2"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:layout_gravity="center_vertical">
                <com.example.wirelesstransferandroid.customviews.FunctionBtnView
                    android:id="@+id/fileSendBtn"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:function_icon="@drawable/file_send_icon"
                    app:function_name="@string/send"
                    android:layout_marginBottom="40dp"
                    android:layout_gravity="fill"/>

                <com.example.wirelesstransferandroid.customviews.FunctionBtnView
                    android:id="@+id/fileReceiveBtn"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:function_icon="@drawable/file_receive_icon"
                    app:function_name="@string/receive"
                    android:layout_marginBottom="40dp"
                    android:layout_gravity="fill"/>
            </GridLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>